# FBCulator

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tauri.appimage.conf.json  tauri.portable.conf.json
.github/workflows/: build.yml  linux.yml  macos.yml  release.yml  windows.yml
src/: App.jsx  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src/utils/: resistors.js
test/: resistors.test.js
