[package]
name = "fbculator"
version = "0.1.0"
description = "DC-DC外围反馈电阻计算器"
authors = ["Your Name <your.email@example.com>"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.3", features = ["shell-open"] }

[features]
custom-protocol = ["tauri/custom-protocol"] 
